force-app/main/default/objects/Account/fields/ActivitySignal__c.field-meta.xml
<CustomField>
    <fullName>ActivitySignal__c</fullName>
    <formula>if( isblank( DaysSinceLastActivity__c ),
  &quot;未接触&quot;,
  if( DaysSinceLastActivity__c &lt; 30,
    image(&quot;/img/samples/light_green.gif&quot;, &quot;1ヶ月以内&quot;),
    if(  DaysSinceLastActivity__c &lt; 60,
      image(&quot;/img/samples/light_yellow.gif&quot;, &quot;2ヶ月以内&quot;),
      image(&quot;/img/samples/light_red.gif&quot;, &quot;2ヶ月放置&quot;)
    )
  )
)</formula>
    <label>活動シグナル</label>
    <type>Text</type>
</CustomField>