force-app/main/default/objects/Account/fields/DaysSinceLastActivity__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLastActivity__c</fullName>
    <formula>today() - LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終活動日からの日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>