force-app/main/default/objects/Account/fields/PreviousActivityDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousActivityDate__c</fullName>
    <label>前回の活動日</label>
    <type>Date</type>
</CustomField>