force-app/main/default/objects/Account/listViews/Neglected_30.listView-meta.xml
<ListView>
    <fullName>Neglected_30</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>DaysSinceLastActivity__c</columns>
    <columns>ActivitySignal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DaysSinceLastActivity__c</field>
        <operation>greaterThan</operation>
        <value>30</value>
    </filters>
    <label>30日放置している取引先</label>
</ListView>