force-app/main/default/objects/Account/listViews/noAction.listView-meta.xml
<ListView>
    <fullName>noAction</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>DaysSinceLastActivity__c</columns>
    <columns>ActivitySignal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ActivitySignal__c</field>
        <operation>equals</operation>
        <value>未接触</value>
    </filters>
    <label>未接触の取引先</label>
</ListView>